fix scrollbar

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -19,10 +19,6 @@
   --font-weight-black: 800;
 }
 
-html {
-  scrollbar-gutter: stable;
-}
-
 html,
 body {
   max-width: 100vw;
@@ -200,12 +196,12 @@ button:disabled {
 }
 
 /* Hide number input spinners */
-input[type="number"] {
+input[type='number'] {
   -moz-appearance: textfield;
 }
 
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
